# charge-controller-firmware

./: .buildinfo  .gitignore  .gitmodules  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  README.md  STM32L073XZ.ld.link_script.ld  buildreport.md  check.bat  check.sh  generate_version_file.py  genindex.html  grabber.py  index.html  linker_flags_newlib-nano.py  mbed_app.json  objects.inv  platformio-extra.py  platformio.ini  search.html  searchindex.js  stlink_extra_script.py  west.yml
.github/workflows/: platformio.yml  zephyr.yml
_sources/: index.rst.txt
app/: CMakeLists.txt  Kconfig  prj.conf  west.yml
app/src/: CMakeLists.txt  bat_charger.cpp  bat_charger.h  board.h  daq.cpp  daq.h  daq_driver.c  data_objects.cpp  data_objects.h  data_storage.cpp  data_storage.h  dcdc.cpp  dcdc.h  device_status.cpp  device_status.h  half_bridge.c  half_bridge.cpp  half_bridge.h  hardware.cpp  hardware.h  helper.h  kalman_soc.cpp  kalman_soc.h  leds.cpp  leds.h  load.cpp  load.h  load_driver.c  main.cpp  mcu.h  power_port.cpp  power_port.h  pwm_switch.cpp  pwm_switch.h  pwm_switch_driver.c  setup.cpp  setup.h
app/src/ext/: CMakeLists.txt  can.cpp  oled.cpp  serial.cpp
boards/: Kconfig  Kconfig.hidden  README.md  mppt_1210_hus.json  mppt_1210_hus@0.7.json  mppt_1210_hus_0v4.json  mppt_1210_hus_0v7.json  mppt_2420_hc@0.2.json  mppt_2420_hpx.json  mppt_2420_lc.json  mppt_2420_lc_0v10.json  mppt_2420_rc.json  nucleo_g474re.json  owntech_board.json  pwm_2420_lus.json
docs/: Doxyfile  README.md  charger-concepts.md  charger.md  conf.py  firmware.md  module-overview.md  zephyr-cheatsheet.md
dts/bindings/: adc-inputs.yaml  half-bridge.yaml  outputs.yaml  zephyr,dummy-adc.yaml  zephyr,dummy-pwm.yaml
img/: arrow_right.c  load.c  load.xbm  panel.c  panel.xbm  x.c
lib/Adafruit_GFX/: Adafruit_GFX.cpp  Adafruit_GFX.h  Adafruit_SSD1306.cpp  Adafruit_SSD1306.h  OledSSD1306.cpp  OledSSD1306.h  glcdfont.h  logo.h
lib/AnalogValue/: AnalogValue.cpp  AnalogValue.h
lib/BuckConverter/: BuckConverter.cpp  BuckConverter.h
lib/ChargeController/: ChargeController.cpp  ChargeController.h
lib/DogLCD/: font_8x16.h
lib/ESP32/: ESP32.cpp  ESP32.h
lib/HalfBridge/: HalfBridge.cpp  HalfBridge.h
lib/N3310LCD/: .hg_archival.txt  Joystick.cpp  Joystick.h  N3310Fonts.h  N3310LCD.cpp  N3310LCD.h  N3310LCDDefs.h  N3310SPIConfig.h  main.cpp  mbed.bld  mbed_bmp.h
lib/PID/: PID.cpp  PID.h
lib/ThingSet/: Readme.md  cbor.c  cbor.h  thingset.c  thingset.h  thingset_can.h  thingset_cbor.c  thingset_json.c  ts_config.h  ts_parser.c  ts_parser.h
scripts/: check.bat  check.sh  data_objects_parser.py
src/: CMakeLists.txt  adc_dma.cpp  adc_dma.h  adc_dma_mbed.cpp  adc_dma_pil.cpp  adc_dma_zephyr.c  bat_charger.cpp  bat_charger.h  battery.cpp  battery.h  bl_support.cpp  bl_support.h  board.h  can_msg_queue.cpp  can_msg_queue.h  charge_controller.cpp  charger.cpp  charger.h  communication.cpp  communication.h  config.cpp.LeadAcid.template  config.cpp.LiFePo4.template  config.cpp.LiIo.template  config.cpp_template  config.h  config.h_template  config_12a.h  config_20A_old.h  daq.cpp  daq.h  daq_driver.c  daq_mbed.cpp  daq_zephyr.c  data_nodes.cpp  data_nodes.h  data_objects.cpp  data_objects.h  data_storage.cpp  dc_bus.cpp  dc_bus.h  (+74 more)
src/api/: bat_charger.html  daq.html  data_objects.html  dcdc.html  device_status.html  half_bridge.html  load.html  misc.html  power_port.html  pwm_switch.html
src/dev/: building_flashing.html  customization.html  troubleshooting.html  unit_tests.html  workspace_setup.html
src/ext/: CMakeLists.txt  can.cpp  can_msg_queue.cpp  can_msg_queue.h  ext.cpp  ext.h  modem.cpp  oled.cpp  serial.cpp  template.cpp  thingset_can.h  thingset_interface.h  thingset_serial.h  uext.cpp  uext.h  uext_wifi.cpp  wifi.cpp
src/overview/: charger_concepts.html  features.html  supported_hardware.html
src/pcbs/: mppt_1210_hus_0v2.h  mppt_1210_hus_0v4.h  mppt_1210_hus_0v6.h  mppt_1210_hus_0v7.h  mppt_2420_hpx_0v1.h  mppt_2420_lc_0v10.h  pcb_cs_06.h  pcb_ls_010.h  pcb_pwm_01.h  pcb_pwm_02.h  pcb_stub.h  pwm_2420_lus.h  pwm_2420_lus_0v1.h  pwm_2420_lus_0v2.h
src/riot/: cpu_common.c  cpu_conf.h  gpio.h  gpio_all.c  irqs.h  periph_cpu.h
src/uext/: uext_oled.cpp  uext_oled.h  uext_template.cpp  uext_template.h  uext_wifi.cpp  uext_wifi.h
test/: adc_dma_stub.cpp  adc_dma_stub.h  autoconf.h  board.h  charger_tests.cpp  daq_stub.h  devicetree.h  devicetree_mock.h  devicetree_unfixed.h  half_bridge_stub.cpp  main.cpp  soc.h  tests.h  tests_adc.cpp  tests_adc_dma.cpp  tests_bat_charger.cpp  tests_charger.cpp  tests_daq.cpp  tests_dc_bus.cpp  tests_dcdc.cpp  tests_device_status.cpp  tests_half_bridge.cpp  tests_load.cpp  tests_log.cpp  tests_power_port.cpp  unittest_transport.cpp  unittest_transport.h  zephyr.h
tests/: CMakeLists.txt  prj.conf
tests/boards/: native_posix.overlay
tests/src/: daq_stub.h  main.cpp  tests.h  tests_bat_charger.cpp  tests_daq.cpp  tests_dcdc.cpp  tests_device_status.cpp  tests_half_bridge.cpp  tests_kalman_soc.cpp  tests_load.cpp  tests_power_port.cpp
zephyr/: .gitignore  CMakeLists.txt  Kconfig  mppt_1210_hus.overlay_0v4  prj.conf  pwm_2420_lus.overlay_0v2  west.yml
zephyr/dts/bindings/: adc-gain.yaml  adc-inputs.yaml  charge-controller.yaml  charlieplexing-leds.yaml  dcdc.yaml  half-bridge.yaml  outputs.yaml  pwm-out.yaml  pwm-switch.yaml  switch.yaml
zephyr/dts/bindings/lib/: readme.txt
zephyr/dts/bindings/lib/oled-display/: CMakeLists.txt  README.md  library.json
zephyr/dts/bindings/lib/oled-display/src/: adafruit_gfx.cpp  adafruit_gfx.h  logo.h  oled_ssd1306.cpp  oled_ssd1306.h
zephyr/dts/bindings/lib/thingset/: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  library.json  linker_flags_newlib-nano.py  platformio.ini
zephyr/dts/bindings/lib/thingset/src/: cbor.c  cbor.h  jsmn.h  main.cpp  thingset.cpp  thingset.h  thingset_bin.cpp  thingset_txt.cpp  ts_config.h
zephyr/dts/bindings/lib/thingset/test/: main.cpp  test_data.h  test_functions.h  tests.h  tests_bin.cpp  tests_common.cpp  tests_txt.cpp
zephyr/subsys/cpp/: guards.c
(+140 files in other folders)
